# hidden_uncertainty_med_qa

./: README.md  pyproject.toml
scripts/: reproduce_tables.py
