[project]
name = "hidden-uncertainty-med-qa"
version = "0.1.0"
description = "Reproducibility scripts for 'Hidden Uncertainty in Medical QA' paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0,<2.0.0",  # Pin to 1.26.x for reproducible argsort behavior
    "pandas>=2.0.0",
    "scikit-learn==1.7.2",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
download = [
    "zenodo_get>=1.6.0",
]

[tool.uv]
dev-dependencies = []
